Hice y agregué cambios de ventanas.
Cambié el filtro de búsqueda.
Agregué ventanas de pagos, ver reservas, habitaciones, soporte para el ADMIN, falta acomodar esas ventanas o las que se necesiten para los clientes.
También redireccioné la gran mayoría de ellas.
Las ventanas que agregué ya tienen para agregar las tablas de la BD.

--- a/proyectoHotelGabarra/styles/inicio.css
+++ b/proyectoHotelGabarra/styles/inicio.css
@@ -89,7 +89,7 @@ header .navlinks span {
 .image-square {
     width: 40px;
     height: 40px;
-    background-image: url('https://img.freepik.com/vector-premium/icono-perfil-usuario-estilo-plano-ilustracion-vector-avatar-miembro-sobre-fondo-aislado-concepto-negocio-signo-permiso-humano_157943-15752.jpg?w=740');
+    background-image: url('https://st2.depositphotos.com/50337402/47114/v/450/depositphotos_471143640-stock-illustration-approve-gold-plated-metalic-icon.jpg');
     background-size: cover;
     background-position: center;
     background-color: #ddd;
