--- a/proyectoHotelGabarra/styles/Admin.css
+++ b/proyectoHotelGabarra/styles/Admin.css
@@ -137,3 +137,21 @@ header .navlinks span {
         background-size: cover;
     }
 }
+
+.volverBtn {
+    position: relative;
+    width: 100%;
+    height: 40px;
+    background: rgb(234, 238, 5);
+    box-shadow: 0 0 10px rgb(234, 238, 5);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
