--- a/proyectoHotelGabarra/styles/filtroBusqueda.css
+++ b/proyectoHotelGabarra/styles/filtroBusqueda.css
@@ -8,195 +8,252 @@
 }
 
 body {
+    background-color: #f0f0f0;
     font-family: Arial, sans-serif;
-    min-height: 100vh;
-    position: relative;
-    border-radius: 20px;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #000;
-    box-shadow: 0 0 20px rgb(234, 238, 5);
+    background-color: #000;
+    color: rgb(234, 238, 5);
     padding: 20px;
-    overflow: hidden;
 }
 
-.left-section, .right-section {
+.header-left {
     display: flex;
     align-items: center;
 }
 
-.image-squareUser, .image-square {
+.verified-icon {
     width: 50px;
     height: 50px;
-    background-size: cover;
-    background-position: center;
-    background-color: #ddd;
+    margin-right: 10px;
 }
 
-.image-squareUser {
-    background-image: url('https://st2.depositphotos.com/50337402/47114/v/450/depositphotos_471143640-stock-illustration-approve-gold-plated-metalic-icon.jpg');
+.username {
+    font-size: 20px;
+    color: white;
+    margin-right: 20px;
 }
 
-.image-square {
-    background-image: url('https://st5.depositphotos.com/17912498/70559/v/600/depositphotos_705595492-stock-illustration-black-solid-icon-open.jpg');
+.header-center {
+    text-align: center;
+    flex-grow: 1;
 }
 
-.loginBtn-text, .volverBtn-text {
-    color: rgb(234, 238, 5);
-    margin-left: 10px;
-    font-weight: 500;
-    text-decoration: none;
+.header-center h1 {
+    margin: 0;
 }
 
-.loginBtn-text:hover, .volverBtn-text:hover {
-    text-decoration: underline;
+.stars {
+    margin-top: 5px;
+}
+
+.stars span {
+    font-size: 20px;
+    color: gold;
+}
+
+.header-right {
+    margin-left: auto;
+}
+
+.volverBtn {
+    position: relative;
+    width: 100%;
+    height: 40px;
+    background: rgb(234, 238, 5);
+    box-shadow: 0 0 10px rgb(234, 238, 5);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
 }
 
 .wrapper {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+    padding: 20px;
 }
 
 .form-wrapper {
-    width: 400px;
-    height: auto;
+    width: 300px;
     background: #000;
-    box-shadow: 0 0 50px rgb(234, 238, 5);
-    border-radius: 20px;
-    padding: 40px;
-    overflow: hidden;
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    margin-right: 20px;
 }
 
-h2 {
-    font-size: 30px;
-    color: rgb(246, 247, 223);
-    text-align: center;
+.date-picker,
+.person-selector {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
 }
 
-.input-group {
-    position: relative;
-    margin: 10px 0;
-    border-bottom: 2px solid rgb(247, 223, 239);
+.date-picker label,
+.person-selector label {
+    margin-bottom: 5px;
 }
 
-.input-group label {
-    position: absolute;
-    top: 30%;
-    left: 5px;
-    transform: translateY(-100%);
+.date-picker input,
+.person-selector select {
+    padding: 5px;
     font-size: 16px;
-    color: rgb(246, 247, 223);
-    pointer-events: none;
-    transition: .5s;
-}
-
-.input-group input {
-    width: 100%;
-    height: 40px;
-    font-size: 16px;
-    color: rgb(246, 247, 223);
-    padding: 0 5px;
-    background: transparent;
-    border: none;
-    outline: none;
-    text-align: left;
+    border-radius: 5px;
+    border: 1px solid #ccc;
 }
 
 button {
+    position: relative;
     width: 100%;
     height: 40px;
     background: rgb(234, 238, 5);
     box-shadow: 0 0 10px rgb(234, 238, 5);
-    font-size: 16px;
-    color: #000;
-    font-weight: 500;
-    cursor: pointer;
-    border-radius: 30px;
-    border: none;
-    outline: none;
-}
-
-input[type="date"] {
-    color: white; 
-}
-
-input[type="date"]::-webkit-calendar-picker-indicator {
-    filter: invert(1); 
-}
-
-
-.custom-options {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    background: #444546;
-    box-shadow: 0 0 10px rgb(234, 238, 5);
-    border-radius: 5px;
-    display: none;
-    flex-direction: column;
-    z-index: 2;
-}
-
-.custom-select.open .custom-options {
-    display: flex;
-}
-
-.custom-option {
     padding: 10px 20px;
+    border: none;
+    border-radius: 30px;
     cursor: pointer;
-    transition: background 0.3s ease;
-    color: #ecf0f1;
-}
-
-.custom-option:hover {
-    background: rgb(234, 238, 5);
-}
-
-.custom-option.selected {
-    background: rgb(234, 238, 5);
-}
-
-select.custom-select {
-    display: none;
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .personas-container {
     display: flex;
-    justify-content: center;
     align-items: center;
-    margin: 10px 0;
+    justify-content: space-between;
     background: #000;
     padding: 10px;
     border-radius: 5px;
-    box-shadow: 10px 15px 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 
 .personas-btn {
-    background: rgb(234, 238, 5);
-    border: none;
-    color: #000;
-    font-size: 20px;
+    position: relative;
     width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 40px;
+    background: rgb(234, 238, 5);
+    box-shadow: 0 0 10px rgb(234, 238, 5);
+    font-size: 35px;
+    color: black;
     cursor: pointer;
-    margin: 0 10px;
+    border-radius: 20px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #personas-count {
-    color: #ecf0f1;
+    color: white;
     font-size: 20px;
     width: 30px;
     text-align: center;
 }
+
+.rooms {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.room-card {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    height: 10cm;
+}
+
+.room-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.room-info {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 70%;
+}
+
+.room-info h3 {
+    margin-bottom: 10px;
+}
+
+.room-info p {
+    margin-bottom: 10px;
+}
+
+.room-info button {
+    position: relative;
+    width: 100%;
+    height: 40px;
+    background: rgb(234, 238, 5);
+    box-shadow: 0 0 10px rgb(234, 238, 5);
+    font-size: 20px;
+    color: #000;
+    cursor: pointer;
+    border-radius: 30px;
+    border: none;
+    padding: 10px;
+    font-weight: bold;
+}
+
+/* Agregar estilos para el resumen y el botón de pagar */
+#resumen {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.resumen-item {
+    background: white;
+    color: black;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    text-align: left; /* Asegura que el texto dentro del resumen-item esté alineado a la izquierda */
+}
+
+#pagarReserva {
+    margin-top: 20px;
+    background: rgb(234, 238, 5);
+    box-shadow: 0 0 10px rgb(234, 238, 5);
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%; /* Asegura que el botón ocupe todo el ancho disponible */
+}
+
+.divider {
+    border: none;
+    height: 2px;
+    background-color: rgb(234, 238, 5);
+    margin: 20px 0; /* Espaciado alrededor de la línea divisoria */
+}
+
+
+
+
+
 
