--- a/public/styles/sesionIniciada.css
+++ b/public/styles/sesionIniciada.css
@@ -9,7 +9,15 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
-
+.nombreUsuario{
+    color: #ddd;
+}
+span{
+    color: #ddd;
+}
+p{
+    color: #ddd;
+}
 h1, h2 {
     font-family: sans-serif;
     font-weight: 400;
