Arreglos de diseño y filtro de búsqueda
Se arregló filtro de búsqueda, faltan algunos detalles comentados.
Se acomodaron nuevas imágenes y diseño en algunos html.

--- a/public/styles/inicio.css
+++ b/public/styles/inicio.css
@@ -40,7 +40,7 @@ li {
 header {
     padding: 20px 20px;
     background: #000;
-    box-shadow: 0 0 10px rgb(234, 238, 5);
+    box-shadow: 0 0 10px rgb(200, 150, 41);
     display: flex;
     align-items: center;
     position: fixed;
@@ -71,7 +71,7 @@ header ul li a {
 }
 
 header ul li a:hover {
-    color: #FFD700;
+    color: rgb(200, 150, 41);
 }
 
 header i {
@@ -114,7 +114,7 @@ header .navlinks span {
 }
 
 .slider {
-    background-image: url('../images/sencilla1.jpg');
+    background-image: url('../images/frente.jpeg');
     background-size: cover;
     background-position: center;
     height: calc(100vh - 40px);
@@ -128,27 +128,27 @@ header .navlinks span {
 
 @keyframes animate {
     20% {
-        background-image: url('../images/sencilla1.jpg');
+        background-image: url('../images/frente.jpeg');
         background-size: cover;
     }
 
     40% {
-        background-image: url('../images/sencilla2.jpg');
+        background-image: url('../images/pasillo.jpeg');
         background-size: cover;
     }
 
     60% {
-        background-image: url('../images/sencilla3.jpg');
+        background-image: url('../images/piscina.jpeg');
         background-size: cover;
     }
 
     80% {
-        background-image: url('../images/sencilla4.jpg');
+        background-image: url('../images/buffet.jpeg');
         background-size: cover;
     }
 
     100% {
-        background-image: url('../images/sencilla4.jpg');
+        background-image: url('../images/sala.jpeg');
         background-size: cover;
     }
 }
