--- a/public/styles/filtroBusqueda.css
+++ b/public/styles/filtroBusqueda.css
@@ -252,8 +252,84 @@ button {
     margin: 20px 0; /* Espaciado alrededor de la línea divisoria */
 }
 
+.error {
+    color: red;
+    margin-top: 10px;
+    text-align: center;
+}
 
+/* Estilos para el modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    text-align: center;
+    border-radius: 10px;
+    position: relative;
+}
 
+.close-btn {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    background: red;
+    box-shadow: 0 0 10px red;
+    font-size: 35px;
+    color: black;
+    float: right;
+    font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    border-radius: 35px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-image {
+    width: 100px;
+    height: 100px;
+}
+
+.modal-body p {
+    margin: 15px 0;
+    font-size: 18px;
+}
+
+#confirmarPagoBtn {
+    background: rgb(234, 238, 5);
+    box-shadow: 0 0 10px rgb(234, 238, 5);
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px 20px;
+}
 
 
