--- a/public/styles/filtroBusqueda.css
+++ b/public/styles/filtroBusqueda.css
@@ -17,13 +17,15 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: #000;
-    color: rgb(234, 238, 5);
+    color: #efb810;
     padding: 20px;
 }
 
 .header-left {
     display: flex;
     align-items: center;
+    color: #efb810;
+    font-size: 25px;
 }
 
 .verified-icon {
@@ -53,7 +55,7 @@ body {
 
 .stars span {
     font-size: 20px;
-    color: gold;
+    color: #efb810;
 }
 
 .header-right {
@@ -64,8 +66,8 @@ body {
     position: relative;
     width: 100%;
     height: 40px;
-    background: rgb(234, 238, 5);
-    box-shadow: 0 0 10px rgb(234, 238, 5);
+    background: #efb810;
+    box-shadow: 0 0 10px yellow;
     padding: 10px 20px;
     border: none;
     border-radius: 30px;
@@ -114,8 +116,8 @@ button {
     position: relative;
     width: 100%;
     height: 40px;
-    background: rgb(234, 238, 5);
-    box-shadow: 0 0 10px rgb(234, 238, 5);
+    background: #efb810;
+    box-shadow: 0 0 10px yellow;
     padding: 10px 20px;
     border: none;
     border-radius: 30px;
@@ -141,8 +143,8 @@ button {
     position: relative;
     width: 30px;
     height: 40px;
-    background: rgb(234, 238, 5);
-    box-shadow: 0 0 10px rgb(234, 238, 5);
+    background: #efb810;
+    box-shadow: 0 0 10px yellow;
     font-size: 35px;
     color: black;
     cursor: pointer;
@@ -204,8 +206,8 @@ button {
     position: relative;
     width: 100%;
     height: 40px;
-    background: rgb(234, 238, 5);
-    box-shadow: 0 0 10px rgb(234, 238, 5);
+    background: #efb810;
+    box-shadow: 0 0 10px yellow;
     font-size: 20px;
     color: #000;
     cursor: pointer;
@@ -232,8 +234,8 @@ button {
 
 #pagarReserva {
     margin-top: 20px;
-    background: rgb(234, 238, 5);
-    box-shadow: 0 0 10px rgb(234, 238, 5);
+    background: #efb810;
+    box-shadow: 0 0 10px yellow;
     border: none;
     border-radius: 30px;
     cursor: pointer;
@@ -248,7 +250,7 @@ button {
 .divider {
     border: none;
     height: 2px;
-    background-color: rgb(234, 238, 5);
+    background-color: #efb810;
     margin: 20px 0; /* Espaciado alrededor de la línea divisoria */
 }
 
@@ -322,8 +324,8 @@ button {
 }
 
 #confirmarPagoBtn {
-    background: rgb(234, 238, 5);
-    box-shadow: 0 0 10px rgb(234, 238, 5);
+    background: #efb810;
+    box-shadow: 0 0 10px yellow;
     border: none;
     border-radius: 30px;
     cursor: pointer;
