--- a/public/styles/inicio.css
+++ b/public/styles/inicio.css
@@ -40,7 +40,7 @@ li {
 header {
     padding: 20px 20px;
     background: #000;
-    box-shadow: 0 0 10px rgb(200, 150, 41);
+    box-shadow: 0 0 10px #efb810;
     display: flex;
     align-items: center;
     position: fixed;
@@ -71,7 +71,7 @@ header ul li a {
 }
 
 header ul li a:hover {
-    color: rgb(200, 150, 41);
+    color: #efb810;
 }
 
 header i {
