--- a/public/styles/verReservas.css
+++ b/public/styles/verReservas.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
+
+.eliminar-btn {
+    background-color: red;
+    float: right; 
+     right: 0; 
+     top: 0; 
+     margin-right: 20%; 
+  }
+
 * {
     margin: 0;
     padding: 0;
